<resources>
    <string name="app_name">Dokusho</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Save</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profiles</string>
    <string name="txt_search">Search ...</string>

    <string name="text_welcome_back">Mừng bạn trở lại!</string>
    <string name="text_register_account">Đăng ký tài khoản</string>
    <string name="text_forgot_password">Quên mật khẩu?</string>
    <string name="text_or_login">Hoặc đăng nhập với</string>
    <string name="text_accounted">Tôi đã có tài khoản rồi</string>
    <string name="text_check_agree">Tôi đồng ý với</string>
    <string name="text_terms_of_use">Điều khoản sử dụng</string>
    <string name="text_buy_coin">Nạp xu</string>
    <string name="text_current_coin">Số dư hiện tại</string>
    <string name="text_add_coin">Nạp xu vào Dokusho</string>
    <string name="text_terms_policy">Điều khoản và chính sách</string>
    <string name="text_99_coin">99 xu</string>
    <string name="text_nick_name">Nick name</string>
    <string name="text_storing">Truyện đã lưu</string>
    <string name="text_read_story">Đọc truyện</string>
    <string name="text_name_story">Tên truyện</string>
    <string name="text_name_author">Tên tác giả</string>
    <string name="text_information_profile">Thông tin cá nhân</string>
    <string name="text_edit_profile">Chỉnh sửa thông tin cá nhân</string>
    <string name="text_detail_story">Chi tiết truyện</string>
    <string name="text_full_name">Họ tên:</string>
    <string name="text_date_birth">Ngày sinh:</string>
    <string name="text_email">Email:</string>
    <string name="text_author">Tác giả:</string>
    <string name="text_category">Thể loại:</string>
    <string name="text_source">Nguồn:</string>
    <string name="text_edit">Edit:</string>
    <string name="text_status">Trạng thái:</string>
    <string name="text_summary_content">Tóm tắt nội dung</string>
    <string name="text_favorite_story">Bạn thích truyện này?</string>
    <string name="text_comment">Hãy để lại đánh giá</string>
    <string name="text_write_comment">Viết bình luận</string>
    <string name="text_leave_a_comment">Để lại bình luận …</string>
    <string name="text_register_success">Đăng ký thành công</string>
    <string name="text_register_status">Úi!</string>
    <string name="text_email_false">Email này đã có người đăng ki</string>
    <string name="text_chapter_list">Danh sách chương</string>
    <string name="text_buy_success_chapter">Mua chương thành công!</string>
    <string name="text_back">Trở về</string>
    <string name="text_reads">Đọc ngay</string>
    <string name="text_confirm">Xác nhận mua?</string>
    <string name="text_add_coins">Nạp thêm xu?</string>
    <string name="text_transaction">Giao dịch tốn 100 xu. Bạn có muốn tiếp tục?</string>
    <string name="text_account_coin">Tài khoản của bạn không đủ số dư để mua chương này. Bạn có muốn nạp xu vào tài khoản?</string>
    <string name="text_cancel">Huỷ</string>
    <string name="text_agree">Đồng ý</string>
    <string name="text_comments">Comment</string>
    <string name="textStatus">Úi!</string>
    <string name="text_status_1">Úi! Thêm Chọn</string>
    <string name="text_status_2">Đã có lỗi xảy ra</string>
    <string name="text_status_3">Điều khoản sử dụng</string>
    <string name="text_status_4">Không được để trống!</string>
    <string name="text_status_5">Thay đổi thành công!</string>
    <string name="text_loading">Đang tải...</string>
    <string name="textTitle">Title</string>
    <string name="text_quite">Bỏ qua</string>
    <string name="text_hello_new">Chào bạn mới!</string>
    <string name="text_choose">Hãy chọn ra khoảng 2 thể loại bạn ưa thích. Điều này sẽ giúp Dokusho gợi ý những tác phẩm phù hợp cho bạn! </string>

    <string name="edit_text_name">Tên đăng nhập*</string>
    <string name="edit_text_name_email">Tên đăng nhập/Email*</string>
    <string name="edit_text_email">Email*</string>
    <string name="edit_text_password">Mật khẩu*</string>
    <string name="edit_text_confirm_password">Nhập lại mật khẩu*</string>
    <string name="edit_nick_name">Nick Name</string>
    <string name="edit_full_name">Họ tên</string>
    <string name="edit_date_birth">Ngày sinh</string>
    <string name="edit_email">Email</string>

    <string name="btn_login">Đăng nhập</string>
    <string name="btn_register">Đăng ký</string>
    <string name="btn_create_account">Tạo tài khoản</string>
    <string name="btn_update_profile">Cập nhật thông tin cá nhân</string>
    <string name="btn_save_library">Lưu vào thư viện</string>
    <string name="btn_read_now">Đọc ngay</string>
    <string name="btn_buy_chapter">Mua toàn bộ chương khoá</string>
    <string name="btn_save">Lưu</string>


</resources>