<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_custom_buy">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/iciel_gotham_medium"
        android:text="@string/text_buy_success_chapter"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_back"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_success"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/iciel_gotham_medium"
        android:gravity="end"
        android:text="@string/text_back"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_reads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_success"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_toEndOf="@+id/text_view_back"
        android:fontFamily="@font/iciel_gotham_medium"
        android:text="@string/text_reads"
        android:textColor="#437993"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>