<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/roboto_serif_variable"
            android:text="@string/app_name"
            android:textColor="@color/color_green"
            android:textSize="42sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_serif_variable"
            android:text="@string/text_welcome_back"
            android:textColor="@color/color_green"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_user"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/text_view_welcome_back"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/iciel_gotham_medium"
                android:hint="@string/edit_text_name_email"
                android:inputType="text"
                android:paddingStart="1dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/text_input_layout_user"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/iciel_gotham_medium"
                android:hint="@string/edit_text_password"
                android:inputType="textPassword"
                android:paddingStart="1dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/text_input_layout_password"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/bgr_login"
            android:fontFamily="@font/iciel_gotham_medium"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@color/color_gradient_200"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/button_login"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bgr_register"
            android:fontFamily="@font/iciel_gotham_medium"
            android:text="@string/btn_register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/iciel_gotham_medium"
            android:text="@string/text_forgot_password"
            android:textColor="@color/color_green"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/iciel_gotham_medium"
            android:text="@string/text_or_login"
            android:textColor="@color/color_green"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relative_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_or"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="11dp"
            android:orientation="horizontal">

            <View
                android:layout_width="85dp"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:background="@color/color_green" />

            <View
                android:layout_width="85dp"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:background="@color/color_green" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_2"
            android:layout_width="125dp"
            android:layout_height="39dp"
            android:layout_below="@+id/relative_layout_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="88dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_google"
                android:layout_width="39dp"
                android:layout_height="39dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_google" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_facebook"
                android:layout_width="39dp"
                android:layout_height="39dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_facebook" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>